syntax = "proto3";

option java_multiple_files = true;
option java_package = "laogao.grpc";
option java_outer_classname = "HelloGRPC";
option objc_class_prefix = "HL";

package laogao.grpc;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloTwice (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
